<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/registration_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/reg_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="name" />
            <EditText
                android:id="@+id/reg_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_name_et"
                android:hint="@string/email" />
            <EditText
                android:id="@+id/reg_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_below="@id/reg_email_et"/>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_below="@id/reg_password_et"
                android:text="@string/register"/>
            <Button
                android:id="@+id/reg_to_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@id/register_btn"
                android:text="@string/show_login" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_below="@id/login_email_et"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_below="@id/login_password_et"
                android:text="@string/login"/>
            <Button
                android:id="@+id/login_to_reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/show_register" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

